Add return type validation for service methods